--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      
+
       - name: restore
         id: restore-setup
         uses: actions/cache/restore@v3
@@ -32,7 +32,9 @@ jobs:
 
       - name: setup-environment
         if: steps.restore-setup.outputs.cache-hit != 'true'
-        run: ./ci/setup.sh
+        run: |
+          pwd
+          /ci/setup.sh
 
       - name: store
         uses: actions/cache/save@v3
@@ -43,7 +45,7 @@ jobs:
             - ~/godot
             - ~/.local/share/godot
           key: godot-setup
-        
+
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
