forgot the path in the right spot.

--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -37,10 +37,7 @@ jobs:
         uses: actions/cache/save@v3
         with:
           path: |
-            - ~/butler
-            - ~/*.so
-            - ~/godot
-            - ~/.local/share/godot
+            - /home/runner/.local/share/godot
           key: godot-setup-templates-only
 
   build:
