--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -23,20 +23,23 @@ jobs:
         id: restore-setup
         uses: actions/cache/restore@v3
         with:
-          path: ~/butler
-          key: godot-setup-butler-only
+          path: |
+            ~/butler
+            ~/*.so
+          key: godot-setup-butler-and-so
 
       - name: setup-environment
         if: steps.restore-setup.outputs.cache-hit != 'true'
-        run: |
-          ls -alh ci
-          ./ci/setup.sh
+        run: ./ci/setup.sh
 
       - name: store
+        if: steps.restore-setup.outputs.cache-hit != 'true'
         uses: actions/cache/save@v3
         with:
-          path: ~/butler
-          key: godot-setup-butler-only
+          path: |
+            ~/butler
+            ~/*.so
+          key: godot-setup-butler-and-so
 
   build:
     # The type of runner that the job will run on
