--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -26,7 +26,8 @@ jobs:
           path: |
             ~/butler
             ~/*.so
-          key: godot-setup-butler-and-so
+            ~/godot
+          key: godot-setup-butler-and-godot
 
       - name: setup-environment
         if: steps.restore-setup.outputs.cache-hit != 'true'
@@ -39,7 +40,9 @@ jobs:
           path: |
             ~/butler
             ~/*.so
-          key: godot-setup-butler-and-so
+            ~/godot
+          key: godot-setup-butler-and-godot
+
 
   build:
     # The type of runner that the job will run on
