--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -1,19 +1,13 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
 
-# Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
     branches: [ "main" ]
 
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   prep:
     runs-on: ubuntu-latest
     steps:
@@ -27,7 +21,8 @@ jobs:
             ~/butler
             ~/*.so
             ~/godot
-          key: godot-setup-butler-and-godot
+            ~/.local/share/godot/export_templates/4.1.1.stable/
+          key: godot-setup
 
       - name: setup-environment
         if: steps.restore-setup.outputs.cache-hit != 'true'
@@ -41,7 +36,8 @@ jobs:
             ~/butler
             ~/*.so
             ~/godot
-          key: godot-setup-butler-and-godot
+            ~/.local/share/godot/export_templates/4.1.1.stable/
+          key: godot-setup
 
 
   build:
