--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -1,14 +1,14 @@
-name: CI
+name: Build + Deploy
 
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main" ]
+    branches: [ "main", "ci-testing" ]
 
   workflow_dispatch:
 
 jobs:
-  prep:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -39,16 +39,8 @@ jobs:
             ~/.local/share/godot/export_templates/4.1.1.stable/
           key: godot-setup
 
+      - name: build
+        run: ./ci/build.sh
 
-  build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: deploy
+        run: ./ci/deploy.sh
