--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -43,4 +43,6 @@ jobs:
         run: ./ci/build.sh
 
       - name: deploy
+        env:
+          BUTLER_API_KEY: ${{ secrets.BUTLER_API_KEY }}
         run: ./ci/deploy.sh
