removes ci-testing from workflow.

--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -1,9 +1,8 @@
 name: Build + Deploy
 
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main", "ci-testing" ]
+    branches: [ "main" ]
 
   workflow_dispatch:
 
