--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -1,33 +1,26 @@
-# This is a basic workflow to help you get started with Actions
+name: Build + Deploy
 
-name: CI
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
     branches: [ "main" ]
 
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  prep:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      
+
       - name: restore
         id: restore-setup
         uses: actions/cache/restore@v3
         with:
           path: |
-            - ~/butler
-            - ~/*.so
-            - ~/godot
-            - ~/.local/share/godot
+            ~/butler
+            ~/*.so
+            ~/godot
+            ~/.local/share/godot/export_templates/4.1.1.stable/
           key: godot-setup
 
       - name: setup-environment
@@ -35,24 +28,20 @@ jobs:
         run: ./ci/setup.sh
 
       - name: store
+        if: steps.restore-setup.outputs.cache-hit != 'true'
         uses: actions/cache/save@v3
         with:
           path: |
-            - ~/butler
-            - ~/*.so
-            - ~/godot
-            - ~/.local/share/godot
+            ~/butler
+            ~/*.so
+            ~/godot
+            ~/.local/share/godot/export_templates/4.1.1.stable/
           key: godot-setup
-        
-  build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+      - name: build
+        run: ./ci/build.sh
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: deploy
+        env:
+          BUTLER_API_KEY: ${{ secrets.BUTLER_API_KEY }}
+        run: ./ci/deploy.sh
